Implemented enrollment api
